--- a/mobile.css
+++ b/mobile.css
@@ -84,7 +84,7 @@ body {
 
 .navTippyWrap {
   width: 100%;
-  height:100px;
+  height:auto!important;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -92,12 +92,11 @@ body {
   text-align: center;
   position:relative;
   z-index:10;
-  margin-bottom:100px;
-  padding-bottom:10px;
-  padding-top:40px;
+  margin-bottom:10px;
+  /*padding-bottom:10px;*/
   transform: perspective(200px) rotateX(0deg)!important;
-
-
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
 }
@@ -126,34 +125,11 @@ body {
 }
 
    .navTippyWrap {
-        width: 100%;
-        height:auto!important;
-        margin-bottom:20px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding-top:10px;
-        padding-bottom:10px;
+      
 
       }
 
-      .topLogo-graphic{
-        width:320px!important;
-        height:auto;
-      }
-
-      .topLogo-wrap {
-        width:100%!important;
-        height:100px!important;
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding-top:10px;
-        padding-bottom:10px;
-      }
+  
 
     
 
@@ -499,5 +475,26 @@ body {
   }
   
 
+  @media (max-width:800px) {
   
-  
+  .topDog-wrap {
+    background-color:red;
+  }
+
+  .topLogo-graphic{
+    width:320px!important;
+    height:auto;
+  }
+
+  .topLogo-wrap {
+    width:100%!important;
+    height:auto!important;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top:10px;
+    padding-bottom:10px;
+  }
+
+}
